--- a/platformio.ini
+++ b/platformio.ini
@@ -3,13 +3,7 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 monitor_speed = 115200
-
-# Connection Settings (LOCKS the port so it doesn't get lost)
-upload_port = /dev/ttyACM0
-monitor_port = /dev/ttyACM0
-
-# Micro-ROS Configuration (Crucial Part)
-board_microros_transport = serial
+board_microros_transport = wifi
 board_microros_distro = humble
 lib_deps =
     https://github.com/micro-ROS/micro_ros_platformio
